# FIXME:
#add_subdirectory(avl)
add_subdirectory(bar)
add_subdirectory(bbl)
add_subdirectory(bzlib)
# FIXME: Dead?
#add_subdirectory(espresso)
add_subdirectory(extra)
add_subdirectory(hash)
add_subdirectory(mem)
add_subdirectory(mvc)
add_subdirectory(nm)
add_subdirectory(parse)
add_subdirectory(st)
add_subdirectory(tim)
add_subdirectory(util)
add_subdirectory(vec)
add_subdirectory(zlib)
abc_module_propagate()
